--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <button id="generateOverviewBtn">Generate Overview</button>
     <button id="shareSetupBtn">Share Setup Link</button>
     <button id="clearSetupBtn">Clear Current Setup</button>
+    <button id="resetAppBtn">Reset App</button>
   </section>
 
   <section id="setup-config">
