--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
     <input type="file" id="importSetupsInput" accept=".json" class="hidden" />
     <button id="generateOverviewBtn">Generate Overview</button>
     <button id="shareSetupBtn">Share Setup Link</button>
+    <div class="form-row hidden" id="sharedLinkRow">
+      <label for="sharedLinkInput" id="sharedLinkLabel">Shared Link:</label>
+      <input type="url" id="sharedLinkInput" placeholder="Paste shared link" />
+      <button id="applySharedLinkBtn">Load</button>
+    </div>
     <button id="clearSetupBtn">Clear Current Setup</button>
   </section>
 
