--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
           <h3><span class="help-icon" aria-hidden="true">📝</span>User Runtime Feedback</h3>
           <ul>
             <li>Click <strong>Submit User Runtime Feedback</strong> below the runtime to add your own measurement.</li>
-            <li>Include temperature and humidity for more accurate weighting.</li>
+            <li>Include temperature for more accurate weighting.</li>
             <li>Your entries are stored locally and refine the runtime estimate.</li>
           </ul>
         </section>
@@ -787,7 +787,6 @@
       <fieldset>
         <legend>🌡️ Environment</legend>
         <div class="form-row"><label>Temp (°C):<select id="fbTemperature"></select></label></div>
-        <div class="form-row"><label>Humidity:<select id="fbHumidity"></select></label></div>
         <div class="form-row"><label>Charging:<select id="fbCharging"><option value="yes">Yes</option><option value="no">No</option></select></label></div>
         <div class="form-row"><label>Runtime (hrs):<input type="number" step="0.01" id="fbRuntime" required></label></div>
         <div class="form-row"><label>Batteries Used per Day:<input type="number" id="fbBatteriesPerDay"></label></div>
