--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </select>
     <button id="darkModeToggle" title="Toggle dark mode" aria-label="Toggle dark mode">🌙</button>
     <button id="pinkModeToggle" title="Toggle pink mode" aria-label="Toggle pink mode">🐴</button>
-    <button id="helpButton" aria-haspopup="dialog" aria-controls="helpDialog" title="Help">?</button>
+    <button id="helpButton" aria-haspopup="dialog" aria-controls="helpDialog" title="Help (press ? or H)">?</button>
   </div>
 
   <main id="mainContent">
