feat: improve accessibility for theme toggles

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <option value="fr">Français</option>
       <option value="it">Italiano</option>
     </select>
-    <button id="darkModeToggle" title="Toggle dark mode" aria-label="Toggle dark mode">🌙</button>
-    <button id="pinkModeToggle" title="Toggle pink mode" aria-label="Toggle pink mode">🐴</button>
+    <button id="darkModeToggle" title="Toggle dark mode" aria-label="Toggle dark mode" aria-pressed="false">🌙</button>
+    <button id="pinkModeToggle" title="Toggle pink mode" aria-label="Toggle pink mode" aria-pressed="false">🐴</button>
     <button id="helpButton" aria-haspopup="dialog" aria-controls="helpDialog" title="Help (press ? or H)">?</button>
   </div>
 
