--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="Camera Power Planner" />
   <meta property="og:description" content="Plan your camera setup and calculate power consumption &amp; battery life." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="icon.svg" />
+  <meta property="og:image" content="icon.png" />
   <meta name="theme-color" content="#ffffff" />
   <title>Camera Power Planner</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="icon.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="icon.svg" />
+  <link rel="icon" href="icon.png" type="image/png" />
+  <link rel="apple-touch-icon" href="icon.png" />
   <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body>
