feat: add keyboard shortcut for pink mode

--- a/index.html
+++ b/index.html
@@ -659,6 +659,7 @@
           <ul>
             <li>Click the horse button for a pink unicorn theme that accents buttons and headings.</li>
             <li>The setting persists between visits and works in light or dark mode.</li>
+            <li>Press <kbd>P</kbd> to toggle pink mode.</li>
           </ul>
         </section>
         <section data-help-section id="shortcuts">
@@ -666,6 +667,7 @@
           <ul>
             <li><kbd>?</kbd>, <kbd>H</kbd> or <kbd>F1</kbd> – toggle help</li>
             <li><kbd>Escape</kbd> – close dialogs</li>
+            <li><kbd>P</kbd> – toggle pink mode</li>
             <li>Type in dropdowns to filter options</li>
           </ul>
         </section>
