--- a/index.html
+++ b/index.html
@@ -529,6 +529,7 @@
             <li>Compare battery runtimes and check against safe output limits.</li>
             <li>Customize the device database with your own gear.</li>
             <li>Open a searchable help dialog with step-by-step guides and FAQ.</li>
+            <li>Activate a hover help mode to reveal brief explanations by moving the cursor over controls.</li>
             <li>Switch languages, toggle dark or playful pink themes and work fully offline. Theme settings persist.</li>
             <li>Cameras with both V- and B-Mount plates let you swap battery types; the list updates automatically.</li>
           </ul>
@@ -636,6 +637,7 @@
           <ul>
             <li>Open with the <strong>?</strong> button or press <kbd>?</kbd>, <kbd>H</kbd> or <kbd>F1</kbd>.</li>
             <li>Use the search field to filter topics; the query resets when closed.</li>
+            <li>Click "Hover for help" to close the dialog and reveal tooltips when you move the cursor over controls.</li>
             <li>Close the dialog with <kbd>Escape</kbd> or by clicking outside.</li>
           </ul>
         </section>
