--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
   <section id="setup-config">
     <h2 id="deviceSelectionHeading">Device Selection</h2>
+    <button id="clearFiltersBtn" aria-label="Clear All Filters" title="Clear All Filters">&times;</button>
       <div class="form-row">
         <label for="cameraSelect" id="cameraLabel">Camera:</label>
         <div class="select-wrapper">
