--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="Plan your camera setup and calculate power consumption &amp; battery life." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="icon.png" />
-  <meta name="theme-color" content="#ffffff" />
+  <meta name="theme-color" content="#f9f9f9" />
   <title>Camera Power Planner</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="overview-print.css" media="print" />
