Document hover help mode

--- a/index.html
+++ b/index.html
@@ -637,6 +637,7 @@
           <ul>
             <li>Open with the <strong>?</strong> button or press <kbd>?</kbd>, <kbd>H</kbd> or <kbd>F1</kbd>.</li>
             <li>Use the search field to filter topics; the query resets when closed.</li>
+            <li>Click <strong>Hover for help</strong> to show brief explanations when moving the cursor over controls.</li>
             <li>Close the dialog with <kbd>Escape</kbd> or by clicking outside.</li>
           </ul>
         </section>
