feat: add dark mode shortcut

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
         <section data-help-section id="darkModeHelp">
           <h3><span class="help-icon" aria-hidden="true">🌓</span>Dark Mode</h3>
           <ul>
-            <li>Click the moon button to toggle dark mode.</li>
+            <li>Click the moon button or press <kbd>D</kbd> to toggle dark mode.</li>
             <li>The setting persists between visits.</li>
           </ul>
         </section>
@@ -667,6 +667,7 @@
           <ul>
             <li><kbd>?</kbd>, <kbd>H</kbd> or <kbd>F1</kbd> – toggle help</li>
             <li><kbd>Escape</kbd> – close dialogs</li>
+            <li><kbd>D</kbd> – toggle dark mode</li>
             <li><kbd>P</kbd> – toggle pink mode</li>
             <li>Type in dropdowns to filter options</li>
           </ul>
