--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:image" content="icon.png" />
   <meta name="theme-color" content="#f9f9f9" />
+  <meta name="application-name" content="Camera Power Planner" />
+  <meta name="apple-mobile-web-app-title" content="Camera Power Planner" />
   <title>Camera Power Planner</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="overview-print.css" media="print" />
