Document save shortcut

--- a/index.html
+++ b/index.html
@@ -672,6 +672,7 @@
             <li><kbd>Escape</kbd> – close dialogs</li>
             <li><kbd>D</kbd> – toggle dark mode</li>
             <li><kbd>P</kbd> – toggle pink mode</li>
+            <li><kbd>Enter</kbd> or <kbd>Ctrl</kbd>+<kbd>S</kbd> (<kbd>⌘</kbd>+<kbd>S</kbd> on macOS) – save setup</li>
             <li>Type in dropdowns to filter options</li>
           </ul>
         </section>
