--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 <body>
   <a href="#mainContent" class="skip-link" id="skipLink">Skip to content</a>
+  <div id="offlineIndicator" role="status" aria-live="polite">Offline</div>
   <div id="langSelector">
     <select id="languageSelect" aria-label="Select language">
       <option value="en">English</option>
